--- a/index.html
+++ b/index.html
@@ -14,39 +14,37 @@
 </div>
 <div class="main-menu">
     <div class="contant-info">
-        <div><a href="mailto:info@idigital.dev">info@digital.de</a></div>
+        <div><a href="mailto:frank@evesion.com">frank@evesion.com</a></div>
         <div>+971 55 989 2733</div>
     </div>
     <div class="menu-links">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <!--<li><a href="about.html">About</a></li>-->
+            <!--FUTURE UPDATE<li><a href="work.html">Work</a></li>-->
+            <!--FUTURE UPDATE <li><a href="blog.html">Blog</a></li> FUTURE UPDATE-->
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
     <div class="social-media">
-        <div class="social-link-holder"><a href="#">Whatsapp</a></div>
-        <div class="social-link-holder"><a href="#">Twitter</a></div>
-        <div class="social-link-holder"><a href="#">Github</a></div>
-        <div class="social-link-holder"><a href="#">Behance</a></div>
+        <div class="social-link-holder"><a href="https://wa.me/+971559892733" target="_blank">Whatsapp</a></div>
+        <div class="social-link-holder"><a href="https://github.com/evesion/" target="_blank">Github</a></div>
+        <div class="social-link-holder"><a href="https://www.codecademy.com/profiles/evesion83" target="_blank" >Code Academy</a></div>
     </div>
 </div>
 <nav class="container-fluid cnav">
     <div class="row">
         <div class="col">
             <div class="logo-holder">
-                <a href="index.html"><img class="logo" src="images/logo.svg" alt="CRE8"></a>
+                <a href="index.html"><img class="logo" src="images/logo.svg" alt="evesion"></a>
             </div>
         </div>
         <div class="col text-right">
             <div class="social-media">
-                <div class="social-link-holder"><a href="#">Whatsapp</a></div>
-                <div class="social-link-holder"><a href="#">Twitter</a></div>
-                <div class="social-link-holder"><a href="#">Github</a></div>
-                <div class="social-link-holder"><a href="#">Behance</a></div>
-            </div>
+                <div class="social-link-holder"><a href="https://wa.me/+971559892733" target="_blank">Whatsapp</a></div>
+                <div class="social-link-holder"><a href="https://github.com/evesion/" target="_blank">Github</a></div>
+                <div class="social-link-holder"><a href="https://www.codecademy.com/profiles/evesion83" target="_blank" >Code Academy</a></div>
+                    </div>
         </div>
     </div>
 </nav>
@@ -78,16 +76,17 @@
                             <ul>
                                 <li>Websites</li>
                                 <li>e-Commerce Stores</li>
-                                <li>Wordpress Designs</li>
+                                <li>Wordpress Websites</li>
+                                <li>Custom Themes</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-12 col-lg-7">
                         <div class="text">
                             <ul>
+                                <li>Plugins</li>
                                 <li>Custom Code</li>
-                                <li>Script</li>
-                                <li>Algorithms</li>
+                                <li>Mobile Applications</li>
                                 <li>Databases</li>
                             </ul>
                         </div>
@@ -97,56 +96,10 @@
         </div>
         <div class="col-md-6">
             <div class="boxy img-box">
-                <div class="img"><img src="images/img1.png" alt=""></div>
+                <div class="img"><img src="images/SeventhAvenue.png" alt=""></div>
                 <div class="bottom-text">
                     <div class="link">VIEW THIS PROJECT</div>
-                    <div class="text">Hubble eye lenses branding</div>
-                </div>
-                <a href="project.html" class="project-link-full"></a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container-fluid box-content">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="boxy primary-color">
-                <div class="row">
-                    <div class="col">
-                        <h1 class="title">My Weapons<br>
-                                Of Choice</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md-12 col-lg-5">
-                        <div class="text">
-                            <ul>
-                                <li>HTML5</li>
-                                <li>CSS3</li>
-                                <li>Javascript</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-12 col-lg-7">
-                        <div class="text">
-                            <ul>
-                                <li>Python 3</li>
-                                <li>C++</li>
-                                <li>OpenLitespeed</li>
-                                <li>Ubuntu 20.04</li>
-                                <li>CLI</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="boxy img-box">
-                <div class="img"><img src="images/img2.png" alt=""></div>
-                <div class="bottom-text">
-                    <div class="link">VIEW THIS PROJECT</div>
-                    <div class="text">UIUX Design for travel agency</div>
+                    <div class="text">Seventh Avenue Restaurant</div>
                 </div>
                 <a href="project.html" class="project-link-full"></a>
             </div>
@@ -169,8 +122,8 @@
                             <ul>
                                 <li>Seventhavenue</li>
                                 <li>Instaflower</li>
-                                <li>GULP / VUE.JS FRAMEWORKS</li>
-                                <li>RUBY ON RAILS</li>
+                                <li>Getting It Together Podcast Server</li>
+                                <li>Fire & Rescue App</li>
                             </ul>
                         </div>
                     </div>
@@ -189,6 +142,56 @@
         </div>
     </div>
 </div>
+<div class="container-fluid box-content">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="boxy primary-color">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="title">My Weapons<br>
+                                Of Choice</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-12 col-lg-5">
+                        <div class="text">
+                            <ul>
+                                <li>HTML5</li>
+                                <li>CSS3</li>
+                                <li>SASS</li>
+                                <li>Javascript</li>
+                                <li>Bootstrap</li>
+                            
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-12 col-lg-7">
+                        <div class="text">
+                            <ul>
+                                <li>Wordpress</li>
+                                <li>ELEMENTOR</li>
+                                <li>Cyberpanel/li>
+                                <li>Ubuntu Server</li>
+                                <li>CLI</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="boxy img-box">
+                <div class="img"><img src="images/Instaflower.png" alt=""></div>
+                <div class="bottom-text">
+                    <div class="link">VIEW THIS PROJECT</div>
+                    <div class="text">InstaFlower UAE</div>
+                </div>
+                <a href="project.html" class="project-link-full"></a>
+            </div>
+        </div>
+    </div>
+</div>
+<!--
 <div class="container-fluid box-content">
     <div class="row">
         <div class="col-md-6">
@@ -233,6 +236,7 @@
         </div>
     </div>
 </div>
+-->
 <div class="container-fluid default-content">
     <div class="row">
         <div class="col">
@@ -241,7 +245,7 @@
                 <span>Then write the</span><br>
                 <span class="other-color">Code.</span></div>
             <div class="normal-text">
-                <p>I am passionate about interactive media,<br> and in an age of digital I believe bringing code to life is essential.</p>
+                <p>As a passionate enthusiast of interactive media,<br> I am convinced that bringing code to life is vital in a digital era.</p>
             </div>
             <div class="btn-holder">
                 <a href="about.html" class="cr-btn primary">more about me</a>
@@ -253,21 +257,17 @@
     <div class="row">
         <div class="col">
             <div class="lg-text">
-                <span>DELIGHTING OUR</span><br>
-                <span>CLIENTS IS OUR</span><br>
-                <span>MISSION.</span></div>
-            <div class="normal-text">
-                <p>I must explain to you how all this mistaken idea of denouncing pleasure and praising<br> pain was born and I will give you a complete account of the system.</p>
-            </div>
+                <span>GET TO KNOW</span><br>
+                <span>MY CLIENTS.</span><br></div>
             <div class="clients-logos">
-                <div class="logo-holder"><img src="images/client1.png" alt=""></div>
-                <div class="logo-holder"><img src="images/client2.png" alt=""></div>
-                <div class="logo-holder"><img src="images/client3.png" alt=""></div>
-                <div class="logo-holder"><img src="images/client4.png" alt=""></div>
-                <div class="logo-holder"><img src="images/client5.png" alt=""></div>
-                <div class="logo-holder"><img src="images/client6.png" alt=""></div>
-                <div class="logo-holder"><img src="images/client7.png" alt=""></div>
-                <div class="logo-holder"><img src="images/client8.png" alt=""></div>
+                <div class="logo-holder"><img src="images/client1.png" alt="Litespeed UAE"></div>
+                <div class="logo-holder"><img src="images/client2.png" alt="Style & Health Blog"></div>
+                <div class="logo-holder"><img src="images/client3.png" alt="Idigital Development"></div>
+                <div class="logo-holder"><img src="images/client4.png" alt="Seventh Avenue Restaurant"></div>
+                <div class="logo-holder"><img src="images/client5.png" alt="Instaflowr UAE"></div>
+                <div class="logo-holder"><img src="images/client6.png" alt="Al Maha Ink Supplies"></div>
+                <div class="logo-holder"><img src="images/client7.png" alt="Cold Smooth & Tasty"></div>
+                <div class="logo-holder"><img src="images/client8.png" alt="Getting It Together Podcast"></div>
             </div>
         </div>
     </div>
@@ -275,26 +275,26 @@
 <div class="container-fluid other-content">
     <div class="row">
         <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
+            <div class="lg-text">I only see my goals,<br>I don't believe in failure!</div>
             <div class="normal-text">
-                <p>Contact us and we’ll send you the brief form to fill.<br>
-                        Then we’ll contact you within 24 hours.</p>
+                <p>With more than 22 years experience in IT, <br>
+                    I specialize in solving problems and finding solutions to difficult challenges.</p>
             </div>
             <div class="btn-holder">
-                <a href="#" class="cr-btn ex-padding">let’s cre8</a>
+                <a href="#contact" class="cr-btn ex-padding">contact me</a>
             </div>
         </div>
     </div>
 </div>
-<footer class="container-fluid footer">
+<footer id="contact" class="container-fluid footer">
     <div class="row">
         <div class="col">
             <div class="lg-text">
-                <span>100% satisfication.</span><br>
-                <span>let’s create</span>
+                <span>Feel free to</span><br>
+                <span>reach out to me!</span>
             </div>
             <div class="normal-text">
-                <p>We’ll take your business to the next level, with our proven<br>strategies, latest technologies and friendly creatives that<br>will work to produce the best outcome possible.</p>
+                <p>Seih Al Oirabe - Ras Al Khaimah - United Arab Emirates<br>Sanaiya Industrial Area - Al Ain - United Arab Emirates</p>
             </div>
         </div>
     </div>
@@ -302,19 +302,18 @@
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title">Call Me</div>
-                <div class="contact-info">+971 50 829 5822</div>
+                <div class="contact-info">+971 55 989 2733</div>
             </div>
         </div>
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title">E-mail</div>
-                <div class="contact-info"><a href="mailto:info@idigital.dev">info@idigital.dev</a></div>
+                <div class="contact-info"><a href="mailto:frank@@evesion.com">frank@evesion.com</a></div>
                 <div class="social-media">
-                    <div class="social-link-holder"><a href="#">Dribbble</a></div>
-                    <div class="social-link-holder"><a href="#">Instagram</a></div>
-                    <div class="social-link-holder"><a href="#">Twitter</a></div>
-                    <div class="social-link-holder"><a href="#">Facebook</a></div>
-                </div>
+                    <div class="social-link-holder"><a href="https://wa.me/+971559892733" target="_blank">Whatsapp</a></div>
+                    <div class="social-link-holder"><a href="https://github.com/evesion/" target="_blank">Github</a></div>
+                    <div class="social-link-holder"><a href="https://www.codecademy.com/profiles/evesion83" target="_blank" >Code Academy</a></div>
+                            </div>
             </div>
         </div>
     </div>
