--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="col-md-6">
             <div class="boxy img-box">
-                <div class="img"><img src="images/SeventhAvenue.png" alt=""></div>
+                <div class="img"><img src="images/seventhavenue.png" alt=""></div>
                 <div class="bottom-text">
                     <div class="link">VIEW THIS PROJECT</div>
                     <div class="text">Seventh Avenue Restaurant</div>
