--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frank</title>
+    <title>evesion - Frank</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/628a1dcc7b967b1179909f6f/1g3lo8q6p';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->    
+</head>
 <body>
 <div class="menu-toggle">
     <div class="icon"></div>
@@ -20,10 +33,10 @@
     <div class="menu-links">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <!--<li><a href="about.html">About</a></li>-->
+            <li><a href="/index.html#about">About</a></li>
             <!--FUTURE UPDATE<li><a href="work.html">Work</a></li>-->
             <!--FUTURE UPDATE <li><a href="blog.html">Blog</a></li> FUTURE UPDATE-->
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/index.html#contact">Contact</a></li>
         </ul>
     </div>
     <div class="social-media">
@@ -56,6 +69,9 @@
                 <span>Hi</span><br>
                 <span>My Name is</span><br>
                 <span class="other-color">Frank.</span>
+                <div class="normal-text">
+                    <p>Full Stack Developer & Computer Science Specialist</p>
+                </div>
             </div>
         </div>
     </div>
@@ -101,30 +117,27 @@
                     <div class="link">VIEW THIS PROJECT</div>
                     <div class="text">Seventh Avenue Restaurant</div>
                 </div>
-                <a href="project.html" class="project-link-full"></a>
+                <a href="https://seventhavenue-uae.com/" target="_blank" class="project-link-full"></a>
             </div>
         </div>
     </div>
 </div>
-<div class="container-fluid box-content">
+<div class="container-fluid box-content" id="about">
     <div class="row">
         <div class="col-md-6">
             <div class="boxy default-color">
                 <div class="row">
                     <div class="col">
-                        <h1 class="title">My Latest<br>
-                                projects</h1>
+                        <h1 class="title">About<br>
+                                Me</h1>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <div class="text">
-                            <ul>
-                                <li>Seventhavenue</li>
-                                <li>Instaflower</li>
-                                <li>Getting It Together Podcast Server</li>
-                                <li>Fire & Rescue App</li>
-                            </ul>
+                            <p>My skills include full stack development of WordPress, Magento, HTML, CSS, Javascript, Laravel Framework, and responsive web design. </p>
+                            <p>My experience includes, but is not limited to, the development of WordPress and Woocommerce themes and plugins. </p>
+                            <p>I am passionate about troubleshooting and solving technical issues. My curiosity never ceases to amaze me, and I am always up for any challenge.</p>
                         </div>
                     </div>
                 </div>
@@ -132,12 +145,12 @@
         </div>
         <div class="col-md-6">
             <div class="boxy img-box">
-                <div class="img"><img src="images/img3.png" alt=""></div>
+                <div class="img"><img src="images/incident.png" alt=""></div>
                 <div class="bottom-text">
-                    <div class="link">VIEW THIS PROJECT</div>
-                    <div class="text">CoinView App development</div>
+                    <div class="link">COMING SOON</div>
+                    <div class="text">Incident Commander App development</div>
                 </div>
-                <a href="project.html" class="project-link-full"></a>
+                <a href="#" class="project-link-full"></a>
             </div>
         </div>
     </div>
@@ -161,6 +174,7 @@
                                 <li>SASS</li>
                                 <li>Javascript</li>
                                 <li>Bootstrap</li>
+                                <li>Flutter</li>
                             
                             </ul>
                         </div>
@@ -169,8 +183,9 @@
                         <div class="text">
                             <ul>
                                 <li>Wordpress</li>
+                                <li>Woocommerce</li>
                                 <li>ELEMENTOR</li>
-                                <li>Cyberpanel/li>
+                                <li>Cyberpanel</li>
                                 <li>Ubuntu Server</li>
                                 <li>CLI</li>
                             </ul>
@@ -181,7 +196,7 @@
         </div>
         <div class="col-md-6">
             <div class="boxy img-box">
-                <div class="img"><img src="images/Instaflower.png" alt=""></div>
+                <div class="img"><img src="images/instaflower.png" alt=""></div>
                 <div class="bottom-text">
                     <div class="link">VIEW THIS PROJECT</div>
                     <div class="text">InstaFlower UAE</div>
@@ -302,7 +317,7 @@
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title">Call Me</div>
-                <div class="contact-info">+971 55 989 2733</div>
+                <div class="contact-info"><a href="tel:00971559892733">+971 55 989 2733</a></div>
             </div>
         </div>
         <div class="col">
