--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </div>
         <div class="col text-right">
             <div class="social-media">
-                <div class="social-link-holder"><a href="https://wa.me/+971559892733" target="_blank">Whatsapp</a></div>
+                <!--F<div class="social-link-holder"><a href="https://wa.me/+971559892733" target="_blank">Whatsapp</a></div>
                 <div class="social-link-holder"><a href="https://github.com/evesion/" target="_blank">Github</a></div>
-                <div class="social-link-holder"><a href="https://www.codecademy.com/profiles/evesion83" target="_blank" >Code Academy</a></div>
+                <div class="social-link-holder"><a href="https://www.codecademy.com/profiles/evesion83" target="_blank" >Code Academy</a></div>-->
                     </div>
         </div>
     </div>
@@ -262,9 +262,9 @@
             <div class="normal-text">
                 <p>As a passionate enthusiast of interactive media,<br> I am convinced that bringing code to life is vital in a digital era.</p>
             </div>
-            <div class="btn-holder">
+       <!--<div class="btn-holder">
                 <a href="about.html" class="cr-btn primary">more about me</a>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
