--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Freelance Full Stack Developer. My skills include full stack development of WordPress, Magento, HTML, CSS, Javascript, Laravel Framework, and responsive web design. Ras Al Khaimah.">
+    <meta name="description" content="Freelance Full Stack Developer. My skills include full stack development of WordPress, Woocommerce, HTML, CSS, Javascript, and responsive web design. Ras Al Khaimah.">
     <title>Frank - Full Stack Developer and computer science specialist.</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
@@ -136,7 +136,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="text">
-                            <p>My skills include full stack development of WordPress, Magento, HTML, CSS, Javascript, Laravel Framework, and responsive web design. </p>
+                            <p>My skills include full stack development of WordPress, Woocommerce, HTML, CSS, Javascript, Laravel Framework, and responsive web design. </p>
                             <p>My experience includes, but is not limited to, the development of WordPress and Woocommerce themes and plugins. </p>
                             <p>I am passionate about troubleshooting and solving technical issues. My curiosity never ceases to amaze me, and I am always up for any challenge.</p>
                         </div>
