--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Freelance Full Stack Developer. My skills include full stack development of WordPress, Woocommerce, HTML, CSS, Javascript, and responsive web design. Ras Al Khaimah.">
+    <meta name="description" content="Freelance Full Stack Developer. My skills include full stack development of WordPress, Woocommerce, HTML, CSS, and Javascript apps. Ras Al Khaimah.">
     <title>Frank - Full Stack Developer and computer science specialist.</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
