--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <span>My Name is</span><br>
                 <span class="other-color">Frank.</span>
                 <div class="normal-text">
-                    <p>Full Stack Developer & Computer Science Specialist</p>
+                    <h1>Full Stack Developer & Computer Science Specialist</h1>
                 </div>
             </div>
         </div>
@@ -83,8 +83,8 @@
             <div class="boxy c1-color">
                 <div class="row">
                     <div class="col">
-                        <h1 class="title">I Create<br>
-                                High-End</h1>
+                        <h2 class="title">I Create<br>
+                                High-End</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -129,15 +129,16 @@
             <div class="boxy default-color">
                 <div class="row">
                     <div class="col">
-                        <h1 class="title">About<br>
-                                Me</h1>
+                        <h2 class="title">About<br>
+                                Me</h2>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <div class="text">
+                            <p>More than 20 years of technical support and web development experience.</p>
                             <p>My skills include full stack development of WordPress, Woocommerce, HTML, CSS, Javascript, Laravel Framework, and responsive web design. </p>
-                            <p>My experience includes, but is not limited to, the development of WordPress and Woocommerce themes and plugins. </p>
+                            <p>I have developed WordPress and Woocommerce themes and plugins, among other things. </p>
                             <p>I am passionate about troubleshooting and solving technical issues. My curiosity never ceases to amaze me, and I am always up for any challenge.</p>
                         </div>
                     </div>
@@ -162,8 +163,8 @@
             <div class="boxy primary-color">
                 <div class="row">
                     <div class="col">
-                        <h1 class="title">My Weapons<br>
-                                Of Choice</h1>
+                        <h2 class="title">My Weapons<br>
+                                Of Choice</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -214,7 +215,7 @@
             <div class="boxy c2-color">
                 <div class="row">
                     <div class="col">
-                        <h1 class="title">Other Things I Love</h1>
+                        <h2 class="title">Other Things I Love</h2>
                     </div>
                 </div>
                 <div class="row">
