--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="menu-links">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="/index.html#about">About</a></li>
+            <li><a href="index.html#about">About</a></li>
             <!--FUTURE UPDATE<li><a href="work.html">Work</a></li>-->
             <!--FUTURE UPDATE <li><a href="blog.html">Blog</a></li> FUTURE UPDATE-->
-            <li><a href="/index.html#contact">Contact</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
         </ul>
     </div>
     <div class="social-media">
