--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frank</title>
+    <meta name="description" content="I am a Freelance Website Designer based in Ras Al Khaimah, United Arab Emirates. I specialize in creating visually appealing and functional websites for businesses and individuals. Contact me to discuss your web design needs.">
+    <meta name="keywords" content="Freelance Website Designer, Ras Al Khaimah, UAE, Web Designer, Web Developer, Responsive Design, WordPress, HTML, CSS, JavaScript">
+    <title>Freelance Website Designer | Ras Al Khaimah, UAE</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
