--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="I am a Freelance Website Designer based in Ras Al Khaimah, United Arab Emirates. I specialize in creating visually appealing and functional websites for businesses and individuals. Contact me to discuss your web design needs.">
-    <meta name="keywords" content="Freelance Website Designer, Ras Al Khaimah, UAE, Web Designer, Web Developer, Responsive Design, WordPress, HTML, CSS, JavaScript">
+    <meta name="keywords" content="Freelance Website Designer, Ras Al Khaimah, UAE, Web Designer, Web Developer, Responsive Design, WordPress, HTML, CSS, JavaScript, Website Design Services, Affordable Web Design, Custom Web Design, Professional Web Design, Web Design Solutions, Web Design Expert, Web Design Portfolio, Web Design and Development, Freelance Web Designer, Web Design Company, Creative Web Design, Mobile-Friendly Design, E-commerce Websites, Personal Portfolio Websites, Small Business Websites, Web Design Consultation">
     <title>Freelance Website Designer | Ras Al Khaimah, UAE</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
